--- a/pykesko/Cargo.toml
+++ b/pykesko/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline"] }
 kesko = { path = "../kesko"}
+phf = { version = "0.11.1", features = ["macros"] }
 pyo3 = { version = "0.18.3", features = ["extension-module"] }
 serde = { version = "1.0.137" }
 serde_json = "1.0.81"
