--- a/kesko/crates/kesko_models/Cargo.toml
+++ b/kesko/crates/kesko_models/Cargo.toml
@@ -8,6 +8,8 @@ bevy = { workspace = true }
 pyo3 = { version = "0.18.3", features = ["extension-module"] }
 serde = "1.0.137"
 serde_json = "1.0.81"
+urdf-rs = "0.7.2"
+k = "0.30"
 
 kesko_physics = { path = "../kesko_physics" }
 kesko_object_interaction = { path = "../kesko_object_interaction"}
