--- a/kesko/crates/kesko_tcp/Cargo.toml
+++ b/kesko/crates/kesko_tcp/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { workspace = true }
+base64 = "0.21.2"
 serde = "1.0.137"
 serde_json = "1.0.81"
 serde_traitobject = "0.2.8"
