--- a/kesko/crates/kesko_urdf/Cargo.toml
+++ b/kesko/crates/kesko_urdf/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 bevy = { workspace = true }
-pyo3 = { version = "0.18.3", features = ["extension-module"] }
 serde = "1.0.137"
 serde_json = "1.0.81"
 bevy_stl = "0.8.0"
@@ -20,6 +19,9 @@ kesko_object_interaction = { path = "../kesko_object_interaction"}
 kesko_raycast = { path = "../kesko_raycast"}
 kesko_core = { path = "../kesko_core"}
 kesko_models = { path = "../kesko_models"}
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+pyo3 = { version = "0.18.3", features = ["extension-module"] }
 
 
 [build-dependencies]
