--- a/kesko/crates/kesko_models/Cargo.toml
+++ b/kesko/crates/kesko_models/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 bevy = { workspace = true }
-pyo3 = { version = "0.18.3", features = ["extension-module"] }
 serde = "1.0.137"
 serde_json = "1.0.81"
 bevy_stl = "0.8.0"
@@ -16,3 +15,6 @@ kesko_physics = { path = "../kesko_physics" }
 kesko_object_interaction = { path = "../kesko_object_interaction"}
 kesko_raycast = { path = "../kesko_raycast"}
 kesko_core = { path = "../kesko_core"}
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+pyo3 = { version = "0.18.3", features = ["extension-module"] }
