--- a/kesko/Cargo.toml
+++ b/kesko/Cargo.toml
@@ -12,7 +12,8 @@ members = [
     "crates/kesko_tcp",
     "crates/kesko_urdf",
     "crates/placeholder_box",
-    "crates/renet_transport"    
+    "crates/renet_transport",
+    "crates/sdf_model_loader" 
 ]
 
 [package]
@@ -68,6 +69,8 @@ kesko_tcp = { path = "crates/kesko_tcp" }
 kesko_urdf = { path = "crates/kesko_urdf" }
 placeholder_box = { path = "crates/placeholder_box" }
 renet_transport = { path = "crates/renet_transport" }
+sdf_model_loader = { path = "crates/sdf_model_loader" }
+
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 pyo3 = { version = "0.18.3", features = ["extension-module"] }
