--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install requirements
-        run: sudo apt install libasound2-dev -y
+        run: sudo apt install libasound2-dev libudev-dev -y
 
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install requirements
-        run: sudo apt install libasound2-dev -y
+        run: sudo apt install libasound2-dev libudev-dev -y
         
       - name: Checkout repo
         uses: actions/checkout@v3
