--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
     name: "Build and test Kesko"
     runs-on: ubuntu-latest
     steps:
+      - name: Install requirements
+        run: sudo apt install libasound2-dev libudev-dev -y
+
       - name: Checkout repo
         uses: actions/checkout@v3
 
@@ -34,6 +37,9 @@ jobs:
     name: "Build and test PyKesko"
     runs-on: ubuntu-latest
     steps:
+      - name: Install requirements
+        run: sudo apt install libasound2-dev libudev-dev -y
+        
       - name: Checkout repo
         uses: actions/checkout@v3
 
