--- a/kesko/Cargo.toml
+++ b/kesko/Cargo.toml
@@ -52,10 +52,10 @@ opt-level = 3
 codegen-units = 1
 
 [workspace.dependencies]
-bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline", "bevy_gltf"] }
+bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline"] }
 
 [dependencies]
-bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline", "bevy_gltf"] }
+bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline"] }
 
 kesko_types = { path = "crates/kesko_types"}
 kesko_core = { path = "crates/kesko_core" }
