--- a/kesko/crates/sdf_model_loader/Cargo.toml
+++ b/kesko/crates/sdf_model_loader/Cargo.toml
@@ -6,11 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { workspace = true }
+bevy = { workspace = true, features = ["bevy_gltf", "jpeg", "png"] }
 serde = "1.0.137"
 serde_json = "1.0.81"
 bevy_stl = "0.8.0"
-bevy_obj = "0.10.1"
+# bevy_obj = "0.10.1"
+bevy_obj = { git = "https://github.com/AmionSky/bevy_obj.git", rev = "e81dae2", features = [
+    "scene",
+] }
 flatbuffers = "23.5.26"
 roxmltree = "0.18.0"
 
